--- a/img.html
+++ b/img.html
@@ -24,10 +24,10 @@
 
     <p>image kept inside folder</p>
 
-    <img src="mNOTZ4Wt_400x400 (1).jpg" width="150px" height="120px"alt="404 error">
+    <img src="https://pbs.twimg.com/profile_images/1183011023202029569/mNOTZ4Wt_400x400.jpg" width="150px" height="120px"alt="404 error">
 
     <p>image using upload</p>
 
-    <img src="https://1.bp.blogspot.com/-ffC4VEQjP9A/XwG696AmMQI/AAAAAAAAgjw/d0kNDtTSyqIXOi3TbCmJwx_K2iqoYRrzACLcBGAsYHQ/s1600/vijay.JPG" width="150px" height="120px"
+    <img src="https://1.bp.blogspot.com/-ffC4VEQjP9A/XwG696AmMQI/AAAAAAAAgjw/d0kNDtTSyqIXOi3TbCmJwx_K2iqoYRrzACLcBGAsYHQ/s1600/vijay.JPG" width="150px" height="120px">
 </body>
 </html>
